unpackaged/main/default/objects/Student__c/fields/Docebo_User_Created__c.field-meta.xml
<CustomField>
    <fullName>Docebo_User_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docebo User Created</label>
    <type>Checkbox</type>
</CustomField>