unpackaged/main/default/objects/Student__c/fields/Is_LMS_User__c.field-meta.xml
<CustomField>
    <fullName>Is_LMS_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this user is synced with the LMS</inlineHelpText>
    <label>Is Docebo User?</label>
    <type>Checkbox</type>
</CustomField>