unpackaged/main/default/objects/Student__c/fields/LMS_User_Id__c.field-meta.xml
<CustomField>
    <fullName>LMS_User_Id__c</fullName>
    <label>Docebo User Id</label>
    <type>Email</type>
</CustomField>