unpackaged/main/default/objects/Student__c/fields/LMS_User_Id_Changed__c.field-meta.xml
<CustomField>
    <fullName>LMS_User_Id_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docebo User Id Changed</label>
    <type>Checkbox</type>
</CustomField>