unpackaged/main/default/objects/Student__c/fields/Load_Switch_Code__c.field-meta.xml
<CustomField>
    <fullName>Load_Switch_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Switch (Code)</label>
    <type>Checkbox</type>
</CustomField>