unpackaged/main/default/objects/Student__c/fields/Old_LMS_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_LMS_User_Id__c</fullName>
    <label>Old Docebo User Id</label>
    <type>Email</type>
</CustomField>