unpackaged/main/default/objects/Student__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Students (Sponsor)</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>