unpackaged/main/default/objects/Student__c/fields/Sponsor_Changed__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsor Changed?</label>
    <type>Checkbox</type>
</CustomField>