unpackaged/main/default/objects/Student__c/fields/Student_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student ID (18)</label>
    <type>Text</type>
</CustomField>